# blockchain_project

./: .gitignore  README.md  app.py  blockchain.json  blockchain.py
body/: blockchain.json  blockchain.py  current_database.db  federated_learning.py  genesis.py  main.py  node.py  utils.py
body/rs_blockchain/: Cargo.toml
body/rs_blockchain/src/: lib.rs
templates/: upload.html
