[package]
name = "rs_blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4.31"
blake3 = "1.5.0"
serde = { version = "1.0.193", features = ["derive"]}
serde_json = "1.0.108"
rusqlite = "0.30.0"